--- a/django_git_tinymce/templates/django_git_tinymce/repo_list.html
+++ b/django_git_tinymce/templates/django_git_tinymce/repo_list.html
@@ -21,6 +21,17 @@
             </ul>
       </div>
     </div>
+    {% for object in object_list %}
+    <div class="row">
+        <div class="col-md-12">
+
+
+            <a href="{% url 'home' %}">{{ object.user }}/{{ object.name }}</a>
+
+        </div>
+
+    </div>
+    {% endfor %}
     <div class="footer">
     </div>
 {% endblock %}
