--- a/templates/repo/redux_repo.html
+++ b/templates/repo/redux_repo.html
@@ -14,3 +14,7 @@
   <script>window.props = {{props|json}}; </script>
   <script src="/static/js/{{component}}"></script>
 {% endblock %}
+
+{% block extra_head %}
+  <link rel="stylesheet" href="/static/css/repo.css">
+{% endblock %}
