--- a/templates/repo/file_edit.html
+++ b/templates/repo/file_edit.html
@@ -12,7 +12,7 @@
 	{{ error_message }}
 
 {% else %}
-	<form action="" method="post">
+	<form action="" method="post" novalidate>
 	    {% csrf_token %}
 	    {{ form.as_p }}
 	    <input type="submit" value="Save" />
