--- a/templates/repo/setting.html
+++ b/templates/repo/setting.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load bootstrap3 %}
 
 {% block title %}Repository Setting{% endblock %}
 
@@ -8,11 +9,11 @@
 {% if error_message %}
 	{{ error_message }}
 	<p><a href="{% url 'setting' %}">Go back</a></p>
-	
+
 {% else %}
-	<form action="" method="post">
+	<form action="" method="post" enctype='multipart/form-data'>
 	    {% csrf_token %}
-	    {{ form.as_p }}
+	    {% bootstrap_form form %}
 	    <input type="submit" value="Submit" />
 	</form>
 {% endif %}
