--- a/templates/base.html
+++ b/templates/base.html
@@ -21,13 +21,13 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="{% url 'index' %}">Django-Git</a>
+				<a class="navbar-brand" href="{% url 'index' %}">CSDT OPENs</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li><a href="{% url 'index' %}">Home</a></li>
+					<!-- <li><a href="{% url 'index' %}">Home</a></li> -->
 				</ul>
 				<form class="navbar-form navbar-left" method="GET" action="">
 					<div class="form-group">
@@ -40,13 +40,12 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dashboard <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
-						<li><a href="{% url "gitusers:index" user %}">My Repository</a></li>
-						<li><a href="#">My reviews</a></li>
+						<li><a href="{% url "gitusers:index" user %}">My Repositories</a></li>
 						<li class="divider"></li>
 						<li><a href="{% url 'gitusers:create' user %}">New Repository</a></li>
 					</ul>
 				</li>
-				<li class="dropdown">
+				<!-- <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"title="You have 2 notifications">
 					<span class="glyphicon glyphicon-bell text-danger"></span>
 					<span class="caret"></span></a>
@@ -54,20 +53,18 @@
 						<li><a href="#">Review 42 of Coin3 was updated</a></li>
 						<li><a href="#">Package openrave has a new review</a></li>
 					</ul>
-				</li>
+				</li> -->
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ request.user }} <span class="caret"></span></a>
 					<ul class="dropdown-menu" role="menu">
 						<li><a href="{% url "gitusers:index" user %}">My account</a></li>
-						<li><a href="#">Another action</a></li>
-						<li><a href="#">Something else here</a></li>
 						<li class="divider"></li>
-						<li><a href="#">Logout</a></li>
+						<li><a href="{% url 'logout' %}">Logout</a></li>
 					</ul>
 				</li>
 				{% else %}
 				<li><a href="{% url 'login' %}">Sign in</a></li>
-				<li><a href="#">Sign up</a></li>
+				<!-- <li><a href="#">Sign up</a></li> -->
 				{% endif %}
 				</ul>
 			</div><!-- /.navbar-collapse -->
