--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,8 @@
 <head>
 	<title>Django-Git | {% block title %}{% endblock %}</title>
 	{% bootstrap_css %}
-	<link rel='stylesheet' href='{% static "css/base.css" %}' />
+	<link rel='stylesheet' href="/static/css/base.css" />
+	<link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 	{% block extra_head %}{% endblock %}
 </head>
 
@@ -16,12 +17,12 @@
 		<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span>
+				<span class="sr-only font">Toggle navigation</span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="{% url 'index' %}">CSDT OPENs</a>
+				<a class="navbar-brand font" href="{% url 'index' %}">CSDT OPENs</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -31,15 +32,15 @@
 				</ul>
 				<form class="navbar-form navbar-left" method="GET" action="">
 					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Search" name="search" value='{{ request.GET.search }}'>
+						<input type="text" class="form-control font" placeholder="Search" name="search" value='{{ request.GET.search }}'>
 					</div>
-					<button type="submit" class="btn btn-default">Submit</button>
+					<button type="submit" class="btn btn-default font">Submit</button>
 	      		</form>
 				<ul class="nav navbar-nav navbar-right">
 				{% if request.user.is_authenticated %}
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dashboard <span class="caret"></span></a>
-					<ul class="dropdown-menu" role="menu">
+					<a href="#" class="dropdown-toggle font" data-toggle="dropdown" role="button" aria-expanded="false">Dashboard <span class="caret"></span></a>
+					<ul class="dropdown-menu font" role="menu">
 						<li><a href="{% url "gitusers:index" user %}">My Repositories</a></li>
 						<li class="divider"></li>
 						<li><a href="{% url 'gitusers:create' user %}">New Repository</a></li>
@@ -55,8 +56,8 @@
 					</ul>
 				</li> -->
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ request.user }} <span class="caret"></span></a>
-					<ul class="dropdown-menu" role="menu">
+					<a href="#" class="dropdown-toggle font" data-toggle="dropdown" role="button" aria-expanded="false">{{ request.user }} <span class="caret"></span></a>
+					<ul class="dropdown-menu font" role="menu">
 						<li><a href="{% url "gitusers:index" user %}">My account</a></li>
 						<li class="divider"></li>
 						<li><a href="{% url 'logout' %}">Logout</a></li>
