Fixes an error caused by a 404 on the favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 	<title>Django-Git | {% block title %}{% endblock %}</title>
 	{% bootstrap_css %}
 	<link rel='stylesheet' href="/static/css/base.css" />
+	<link rel="shortcut icon" href="static/img/favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 	{% block extra_head %}{% endblock %}
 </head>
