Redirects to root instead of relative path when you search under a repo

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 				<ul class="nav navbar-nav">
 					<!-- <li><a href="{% url 'index' %}">Home</a></li> -->
 				</ul>
-				<form class="navbar-form navbar-left" method="GET" action="">
+				<form class="navbar-form navbar-left" method="GET" action="/">
 					<div class="form-group">
 						<input type="text" class="form-control" placeholder="Search" name="search" value='{{ request.GET.search }}'>
 					</div>
