Adds a case where the user tries to add just a new directory with add new file

--- a/templates/repo/create_file.html
+++ b/templates/repo/create_file.html
@@ -2,12 +2,12 @@
 
 {% block extra_head %}{{ form.media }}{% endblock %}
 
-{% block title %}Create File{% endblock %}
+{% block title %}Create File/Directory{% endblock %}
 
 {% block content %}
 
 
-<h1>Create File</h1>
+<h1>Create File/Directory</h1>
 
 {% if error_message %}
 	{{ error_message }}
